fix hero overlap

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ main{
 
 #hero{
     font-family: 'Roboto', sans-serif;
-    margin: 0 auto;
+    margin: 54px auto 0px auto;
     width: 100%;
     height: 500px;
     background-image: url(images/hero-keyboard.jpg);
